# zizq

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bump-version.sh  release.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/scripts/: discover-client-versions.sh
.github/workflows/: ci.yml
benches/: recovery.rs  throughput.rs
clients/ruby/: .gitignore  Gemfile  LICENSE  Rakefile  Steepfile  zanxio.gemspec  zizq.gemspec
clients/ruby/lib/: zanxio.rb  zizq.rb
clients/ruby/lib/zanxio/: client.rb  configuration.rb  error.rb  job.rb  resources.rb  version.rb  worker.rb
clients/ruby/lib/zizq/: ack_processor.rb  client.rb  configuration.rb  job.rb  worker.rb
clients/ruby/sig/: external.rbs  zanxio.rbs  zizq.rbs
clients/ruby/test/: test_helper.rb
clients/ruby/test/entrypoints/: simulation.rb
clients/ruby/test/profiler/: entrypoint.rb
clients/ruby/test/zanxio/: test_client.rb  test_configuration.rb  test_job.rb  test_resources.rb  test_worker.rb
clients/ruby/test/zizq/: test_ack_processor.rb  test_client.rb  test_job.rb  test_resources.rb  (+1 more)
docs/: book.toml
docs/api/: book.toml
docs/api/src/: SUMMARY.md  cron-group-entry-response.md  cron-group-response.md  cron.md  enqueue.md  error-response.md  introduction.md  job-response-with-payload.md  job-response-without-payload.md  modifying.md  processing.md  querying.md  range-params.md  range-syntax.md  resetting.md
docs/book/: 404.html  complete-bulk.html  complete-single.html  complete.html  enqueue.html  failure.html  health.html  introduction.html  print.html  query-errors.html  query-get.html  query-list.html  query.html  searcher-c2a407aa.js  searchindex-98d41d70.js  take.html  toc-8e0dcd35.js  toc.html  zizq_docs.css
docs/cli/: book.toml
docs/cli/src/: SUMMARY.md  backoff.md  backups.md  durability.md  installation.md  licenses.md  overview.md  retention.md  serve.md  tls.md  zizq-top.md
docs/cli/theme/: backoff-chart.js
docs/getting-started/: book.toml
docs/getting-started/src/: SUMMARY.md  concepts.md  introduction.md  next-steps.md  quick-start.md
docs/src/: SUMMARY.md  enqueue.md  health.md  introduction.md  job-response-with-payload.md  job-response-without-payload.md  processing.md  querying.md
docs/theme/: index.hbs
src/: filter.rs  http.rs  lib.rs  license.rs  logging.rs  main.rs  reaper.rs  scheduler.rs  serve.rs  state.rs  store.rs  time.rs  tls_cmd.rs
src/admin/: events.rs  mod.rs
src/api/: middleware.rs  mod.rs
src/api/admin/: backup.rs  compact.rs  events.rs  handlers.rs  mod.rs  types.rs
src/api/primary/: handlers.rs  mod.rs  types.rs
src/commands/: backup.rs  compact.rs  mod.rs  restore.rs  serve.rs
src/commands/serve/: cron_scheduler.rs  http.rs  mod.rs  reaper.rs  scheduler.rs  tls.rs
src/commands/top/: app.rs  events.rs  mod.rs  ui.rs
src/store/: complete.rs  complete_batcher.rs  cron.rs  delete.rs  enqueue.rs  enqueue_batcher.rs  fail.rs  group_committer.rs  in_flight_index.rs  keys.rs  maintenance.rs  mod.rs  options.rs  patch.rs  read.rs  ready_index.rs  recover.rs  requeue.rs  results.rs  scan.rs  scheduled.rs  scheduled_index.rs  storage_config.rs  store.rs  take.rs  test_support.rs  types.rs
src/store/complete/: apply.rs  batcher.rs  mod.rs  pre_read.rs
src/store/cron/: mod.rs  ops.rs
src/store/enqueue/: apply.rs  batcher.rs  finalize.rs  mod.rs  prepare.rs
src/top/: app.rs  events.rs  mod.rs  ui.rs
src/top/snapshots/: zizq__top__ui__tests__render_connected_with_server_info.snap  zizq__top__ui__tests__render_connecting.snap  zizq__top__ui__tests__render_disconnected.snap  zizq__top__ui__tests__render_disconnected_wide.snap  zizq__top__ui__tests__render_empty_ready_tab.snap  zizq__top__ui__tests__render_free_tier_in_flight_tab.snap  zizq__top__ui__tests__render_free_tier_in_flight_tab_with_cap_message.snap  zizq__top__ui__tests__render_free_tier_license_message.snap  zizq__top__ui__tests__render_free_tier_ready_tab_with_cap_message.snap  zizq__top__ui__tests__render_in_flight_tab_narrow.snap  zizq__top__ui__tests__render_in_flight_tab_narrow_scrolled.snap  zizq__top__ui__tests__render_in_flight_tab_narrow_scrolled_max.snap  zizq__top__ui__tests__render_in_flight_tab_wide.snap  zizq__top__ui__tests__render_in_flight_tab_with_jobs.snap  zizq__top__ui__tests__render_ready_tab_narrow.snap  zizq__top__ui__tests__render_ready_tab_wide.snap  zizq__top__ui__tests__render_ready_tab_with_jobs.snap  zizq__top__ui__tests__render_scheduled_tab_narrow.snap  zizq__top__ui__tests__render_scheduled_tab_wide.snap  zizq__top__ui__tests__render_scheduled_tab_with_jobs.snap
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/tui/snapshots/: zanxio__tui__ui__tests__render_connected_with_server_info.snap  zanxio__tui__ui__tests__render_connecting.snap  zanxio__tui__ui__tests__render_disconnected.snap  zanxio__tui__ui__tests__render_empty_panes_connected.snap  zanxio__tui__ui__tests__render_panes_on_disconnect.snap  zanxio__tui__ui__tests__render_populated_panes.snap  zizq__tui__ui__tests__render_connected_with_server_info.snap  zizq__tui__ui__tests__render_connecting.snap  zizq__tui__ui__tests__render_disconnected.snap  zizq__tui__ui__tests__render_disconnected_wide.snap  zizq__tui__ui__tests__render_empty_panes_connected.snap  zizq__tui__ui__tests__render_empty_ready_tab.snap  zizq__tui__ui__tests__render_in_flight_tab_with_jobs.snap  zizq__tui__ui__tests__render_panes_on_disconnect.snap  zizq__tui__ui__tests__render_populated_panes.snap  zizq__tui__ui__tests__render_ready_tab_with_jobs.snap  zizq__tui__ui__tests__render_scheduled_tab_with_jobs.snap
(+46 files in other folders)
