[package]
name = "zizq"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[lib]
name = "zizq"
path = "src/lib.rs"
doctest = false

[dependencies]
fjall = "3.0.2"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scru128 = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rmp-serde = "1.3.1"
tokio-stream = "0.1"
crossbeam-skiplist = "0.1"
dashmap = "6"
humantime = "2"
jsonwebtoken = "9"
ratatui = "0.30"
crossterm = "0.29"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["stream", "json"] }
reqwest-websocket = "0.4"
rolling-file = "0.2"
bytesize = "2"
tracing-appender = "0.2"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = { version = "0.14.7", features = ["x509-parser"] }
time = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
rmp = "0.8.15"
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-tungstenite = { version = "0.26", features = ["connect", "handshake"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
rand = "0.8"
insta = "1"
rcgen = "0.14.7"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "recovery"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
