[package]
name = "zizq"
version = "0.4.0"
edition = "2024"
license = "BUSL-1.1"

[lib]
name = "zizq"
path = "src/lib.rs"
doctest = false

[dependencies]
fjall = "3.1.4"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scru128 = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rmp-serde = "1.3.1"
tokio-stream = "0.1"
chrono = "0.4"
chrono-tz = "0.10"
croner = "2"
crossbeam-skiplist = "0.1"
dashmap = "6"
humantime = "2"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
ratatui = "0.30"
crossterm = "0.29"
libc = "0.2"
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "rustls-no-provider"] }
reqwest-websocket = "0.6"
rolling-file = "0.2"
bytesize = "2"
tracing-appender = "0.2"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = { version = "0.14.8", features = ["x509-parser"] }
time = "0.3"
jaq-core = "2.2.1"
jaq-std = "3.0.0"
jaq-json = { version = "1.1.3", features = ["serde_json"] }
urlencoding = "2.1.3"
tar = "0.4"
flate2 = "1"
tempfile = "3"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
rmp = "0.8.15"
criterion = { version = "0.8", features = ["async_tokio"] }
tokio-tungstenite = { version = "0.29", features = ["connect", "handshake"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
rand_core = { version = "0.6", features = ["getrandom"] }
insta = { version = "1", features = ["filters"] }
rcgen = "0.14.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
